--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,24 +2,31 @@ name: Generate Snake Contribution Grid
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # runs every day at midnight
-  workflow_dispatch:
+    - cron: "0 0 * * *"   # Runs every day at midnight UTC
+  workflow_dispatch:       # Allow manual trigger
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+
     steps:
+      # Step 1: Checkout repo
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      # Step 2: Generate the snake animation
       - name: Generate Snake
         uses: Platane/snk@v3
         with:
-          github_user_name: rastogi30
-          outputs: dist/github-contribution-grid-snake.svg
+          github_user_name: rastogi30   # <-- change only if your username is different
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.gif
 
-      - name: Push Snake to Output Branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      # Step 3: Push the generated files to the output branch
+      - name: Push Snake files to output branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
